[gd_scene load_steps=14 format=3 uid="uid://cu4x0ckbd41jr"]

[ext_resource type="Script" path="res://scripts/zombie.gd" id="1_ajsk6"]
[ext_resource type="Texture2D" uid="uid://dkhfxswrya6ls" path="res://media/graphics/zombie.png" id="1_x3bjq"]
[ext_resource type="Script" path="res://scripts/GravityComponent.gd" id="3_djplh"]
[ext_resource type="Script" path="res://scripts/health_component.gd" id="4_brjlu"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="5_v4pd2"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="6_pgfnd"]
[ext_resource type="Script" path="res://scripts/flame_spawner.gd" id="7_d32xh"]
[ext_resource type="PackedScene" uid="uid://div8rux31gto0" path="res://scenes/despawner.tscn" id="8_fueho"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnnlj"]
size = Vector2(2, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7usc"]
size = Vector2(16, 32)

[sub_resource type="Animation" id="Animation_atbyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a58kn"]
resource_name = "default"
length = 0.600002
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhq8d"]
_data = {
"RESET": SubResource("Animation_atbyq"),
"default": SubResource("Animation_a58kn")
}

[node name="Zombie" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 130
script = ExtResource("1_ajsk6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_x3bjq")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_mnnlj")

[node name="GravityComponent" type="Node" parent="."]
script = ExtResource("3_djplh")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("4_brjlu")
max_hp = 1

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("5_v4pd2")
damage = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_j7usc")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 32
script = ExtResource("6_pgfnd")
health_component = NodePath("../HealthComponent")
awarded_points = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_j7usc")

[node name="FlameSpawner" type="Node2D" parent="."]
script = ExtResource("7_d32xh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fhq8d")
}
autoplay = "default"

[node name="Despawner" parent="." instance=ExtResource("8_fueho")]
despawn_range = Vector2(210, 156)

[connection signal="hp_changed" from="HealthComponent" to="." method="_on_hp_changed"]
[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_area_entered"]
